Fixed change of font when swicthing light/dark modes. Updated Published table section.

--- a/src/styles.css
+++ b/src/styles.css
@@ -37,9 +37,6 @@
   --sidebar-accent-foreground: oklch(0.3448 0.0685 255.0266);
   --sidebar-border: oklch(0.8689 0.0106 261.7872);
   --sidebar-ring: oklch(0.6178 0.0703 257.8148);
-  --font-sans: Geist, ui-sans-serif, system-ui, sans-serif;
-  --font-serif: "Instrument Serif", ui-serif, Georgia, serif;
-  --font-mono: "Geist Mono", ui-monospace, "SF Mono", Menlo, monospace;
   --radius: 0.625rem;
   --shadow-x: 0px;
   --shadow-y: 1px;
@@ -102,9 +99,6 @@
   --sidebar-accent-foreground: oklch(0.8036 0.0477 249.4116);
   --sidebar-border: oklch(0.2758 0.0182 262.1965);
   --sidebar-ring: oklch(0.7194 0.0599 249.4577);
-  --font-sans: Outfit, sans-serif;
-  --font-serif: Merriweather, serif;
-  --font-mono: Fira Code, monospace;
   --radius: 0.5rem;
   --shadow-x: 0px;
   --shadow-y: 1px;
@@ -155,10 +149,6 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
-
-  --font-sans: var(--font-sans);
-  --font-mono: var(--font-mono);
-  --font-serif: var(--font-serif);
 
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
